[tool.poetry]
name = "fastack-migrate"
version = "0.1.0"
description = "WIP"
authors = ["aprilahijriyan <37798612+aprilahijriyan@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
fastack = {extras = ["sql"], version = "^2.0.0"}
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = {version = "^21.12b0", allow-prereleases = true}
ipython = "^7.30.1"

[tool.poetry.plugins."fastack.commands"]
db = "fastack_migrate.cli:db"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
